--- a/1-Projective_Planes.tex
+++ b/1-Projective_Planes.tex
@@ -3016,6 +3016,7 @@ Consequently, we observe that $\vect x_3 = \vect x_2 - \vect x_1$. This implies 
         \textbf{Construction.} \citep{cuypers} Let $\Pi$ be a projective plane of order $4$. Take four points $\set{A_1,A_2,A_3,A_4}$ in general position. Consider the lines $\block a_{ij}=A_iA_j$, for $1\le i<j\le4$.
         $$
             \begin{tikzpicture}[
+                scale=0.6,
                 font=\small, % Sets default font to \small for nodes and labels
                 point/.style={circle, fill=black, inner sep=1.2pt, draw=black},
                 line/.style={thin}
@@ -3064,12 +3065,13 @@ Consequently, we observe that $\vect x_3 = \vect x_2 - \vect x_1$. This implies 
             \end{tikzpicture}
         $$
         Introduce the \textsl{diagonal} points (of which only $D_1$ is shown in the picture)
-        \begin{align*}
+        {\small\begin{align*}
             D_1 &= \block a_{13}\wedge\block a_{24},
             &D_2 &= \block a_{12}\wedge\block a_{34},
             &D_3 &= \block a_{14}\wedge\block a_{23}.
-        \end{align*}
+        \end{align*}}
 
+        \vspace{-0.3\baselineskip}
         \needspace{2\baselineskip}
         \textbf{Claim 1.} \textit{The three diagonal points are aligned.}
         \begin{quote}
