--- a/2-Collineations.tex
+++ b/2-Collineations.tex
@@ -1038,6 +1038,8 @@
     If $\Pi$ is a translation plane, then $\ev P$ is surjective and so $|\Elt(\Pi,\block{a})| = n^2$.
 
     Conversely, if $|\Elt(\Pi,\block a)|=n^2$, the injectivity of $\ev P$ implies its surjectivity, which in turn implies that $\Pi$ is a translation plane.
+    %
+    
 \end{proof}
 
 \begin{cor}\label{cor:translation-planes-have-order-p^k}
@@ -1095,6 +1097,7 @@
      $$
         \begin{tikzpicture}[
                 scale=0.8,
+                every node/.style={font=\small},
                 every node/.style={font=\small},
                 c_point/.style={circle,fill=black,inner sep=1.2pt,draw=black},
                 point/.style={circle,fill=gray,inner sep=1.5pt,draw=gray}
