--- a/preamble.tex
+++ b/preamble.tex
@@ -1,4 +1,5 @@
 \usepackage[utf8]{inputenc}
+\usepackage[greek,english]{babel}
 \usepackage{lmodern}
 \usepackage{amsthm}
 \usepackage{etoolbox}
@@ -357,7 +358,8 @@
 
 \newcommand{\pts}{\mathcal{P}}
 \newcommand{\blocks}{\mathcal{B}}
-\newcommand{\incidence}{\textrm{\upshape\textsc{i}}}
+%\newcommand{\incidence}{\textrm{\upshape\textsc{i}}}
+\newcommand{\incidence}{\mbf\imath}
 \newcommand{\igeo}{(\pts,\blocks,\incidence}
 
 \let\oldpts\pts
@@ -406,5 +408,5 @@
 \DeclareMathOperator{\pl}{pl}
 \newcommand{\rr}{\hyperref[eq:rotation-rule]{rotation rule}}
 \newcommand{\qr}{\hyperref[rem:quad-rule]{quad rule}}
-\newcommand{\ter}{\block R}
+\newcommand{\ter}[1][R]{\block #1}
 \definecolor{lightblue}{RGB}{120, 220, 255}
